--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.1
 env:
     variables:
         CACHE_CONTROL: "86400"
-        S3_BUCKET: "argmax-info-fe"
+        S3_BUCKET: "arn:aws:s3:::argmax-info-fe"
         BUILD_FOLDER: "build"
         BUILD_ENV: "prod"
 phases:
