--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,26 +1,47 @@
 version: 0.1
+
 env:
     variables:
-        CACHE_CONTROL: "86400"
-        S3_BUCKET: "arn:aws:s3:::argmax-info-fe"
-        BUILD_FOLDER: "build"
-        BUILD_ENV: "prod"
+        S3_BUCKET: "argmax-info-fe"
+APP_NAME: "argmax-info-fe"
+BUILD_ENV : "prod"
+
 phases:
     install:
         commands:
-            - echo Installing source NPM dependencies...
-            - npm install
-            - npm install -g @angular/cli
-    build:
+        # Download and Install NodeJS 8.0
+        - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+        - sudo apt-get install -y nodejs
+        - echo Installing source NPM dependencies...
+        # Install http drivers for node
+        - sudo apt-get update -y
+        - sudo apt-get install -y apt-transport-https
+        # Install Yarn Package Manager (Replace the commands below if you using NPM).
+        - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
+        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+        - sudo apt-get update -y
+        # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
+        - npm install -g @angular/cli
+        # Install node dependancies.
+        - npm install
+
+build:
         commands:
-            - echo Build started on `date`
-            - ng build --${BUILD_ENV}
-    post_build:
-         commands:
-            - aws s3 cp ${BUILD_FOLDER} s3://${S3_BUCKET} --recursive --acl public-read --cache-control "max-age=${CACHE_CONTROL}"
-            - echo Build completed on `date`
+        # Builds Angular application. You can also build using custom environment here like mock or staging
+        - echo Build started on `date`
+        - ng build --${BUILD_ENV}
+
+post_build:
+        commands:
+        # Clear S3 bucket.
+        - aws s3 rm s3://${S3_BUCKET} --recursive
+        - echo S3 bucket is cleared.
+        # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
+        - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
+        - echo Build completed on `date`
+
 artifacts:
     files:
-        - '**/*'
-    base-directory: 'dist*'
+        - '/'
     discard-paths: yes
+    base-directory: 'dist*'
