--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,6 +42,6 @@ post_build:
 
 artifacts:
     files:
-        - '/'
+        - '**/*'
+    base-directory: 'dist*'
     discard-paths: yes
-    base-directory: 'dist'
