--- a/buildspec.yml
+++ b/buildspec.yml
@@ -31,3 +31,8 @@ post_build:
         - echo S3 bucket is cleared.
         - aws s3 cp dist s3://${S3_BUCKET} --recursive
         - echo Build completed on `date`
+artifacts:
+    files:
+        - '**/*'
+    base-directory: 'dist*'
+    discard-paths: yes
