--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,5 +34,5 @@ post_build:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'dist*'
+    #base-directory: 'dist*'
     discard-paths: yes
