--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,14 +9,6 @@ BUILD_ENV : "prod"
 phases:
     install:
         commands:
-        - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-        - sudo apt-get install -y nodejs
-        - echo Installing source NPM dependencies...
-        - sudo apt-get update -y
-        - sudo apt-get install -y apt-transport-https
-        - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-        - sudo apt-get update -y
         - npm install -g @angular/cli
         - npm install
 
@@ -34,5 +26,5 @@ post_build:
 artifacts:
     files:
         - '**/*'
-    #base-directory: 'dist*'
+    base-directory: 'dist*'
     discard-paths: yes
