--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ post_build:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'dist*'
-    discard-paths: yes
+    #base-directory: 'dist*'
+    #discard-paths: yes
