--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,10 +21,10 @@ post_build:
         commands:
         - aws s3 rm s3://${S3_BUCKET} --recursive
         - echo S3 bucket is cleared.
-        - aws s3 cp dist s3://${S3_BUCKET} --recursive
+        - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
         - echo Build completed on `date`
 artifacts:
     files:
-        - '**/*'
-    #base-directory: 'dist*'
-    #discard-paths: yes
+        - '/'
+    base-directory: 'dist*'
+    discard-paths: yes
