--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,8 +19,8 @@ phases:
 
     post_build:
             commands:
-            - aws s3 rm s3://${S3_BUCKET}/${APP_NAME} --recursive
-            - echo S3 bucket is cleared.
+            #- aws s3 rm s3://${S3_BUCKET}/${APP_NAME} --recursive
+            #- echo S3 bucket is cleared.
             - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
             - echo Build completed on `date`
 artifacts:
