--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
             commands:
             #- aws s3 rm s3://${S3_BUCKET}/${APP_NAME} --recursive
             #- echo S3 bucket is cleared.
-            - aws s3 cp dist s3://${S3_BUCKET}/${APP_NAME} --recursive
+            - aws s3 cp dist s3://${S3_BUCKET} --recursive
             - echo Build completed on `date`
 artifacts:
     files:
