--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
         commands:
             #- aws s3 rm s3://${S3_BUCKET}/${APP_NAME} --recursive
             #- echo S3 bucket is cleared.
-            - aws s3 cp ${BUILD_FOLDER} s3://${S3_BUCKET} --recursive
+            - aws s3 cp dist s3://argmax-info-fe --recursive
 
 artifacts:
     files:
