--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,13 +16,7 @@ phases:
     build:
         commands:
             - echo Build started on `date`
-            - ng build --${BUILD_ENV}
-
-    post_build:
-        commands:
-            #- aws s3 rm s3://${S3_BUCKET}/${APP_NAME} --recursive
-            #- echo S3 bucket is cleared.
-            #- aws s3 cp dist s3://argmax-info-fe --recursive
+            - ng build --'${BUILD_ENV}'
 
 artifacts:
     files:
