--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
     build:
         commands:
             - echo Build started on `date`
-            - ng build --'${BUILD_ENV}'
+            - ng build --prod
 
 artifacts:
     files:
