--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,7 @@ phases:
 
     build:
         commands:
-            - echo Build started on `date`
-            - ng build --prod
+            - ng build --configuration=production
 
 artifacts:
     files:
