--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
 
     build:
         commands:
-            - ng build --configuration=production
+            - npm run build --prod
 
 artifacts:
     files:
