--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             "styles": [
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill/dist/quill.core.css",
-              "./src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": [
               "./node_modules/quill/dist/quill.core.js"
@@ -88,7 +88,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": [
 
