--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/quill/dist/quill.snow.css",
-              "./node_modules/quill/dist/quill.core.css",
-              "./src/styles.css"
+              "../node_modules/quill/dist/quill.snow.css",
+              "../node_modules/quill/dist/quill.core.css",
+              "styles.css"
             ],
             "scripts": [
               "./node_modules/quill/dist/quill.core.js"
@@ -88,7 +88,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./src/styles.css"
+              "styles.css"
             ],
             "scripts": [
 
