--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               "./node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill/dist/quill.core.css",
+              "../node_modules/quill/dist/quill.min.js",
               "src/styles.css"
             ],
             "scripts": [
