--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-quill": "^4.8.0",
     "ngx-quill-editor": "^2.2.2",
     "quill": "^1.3.6",
+    "quill-image-resize-module": "^3.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
