--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/quill/dist/quill.snow.css",
+              "../node_modules/quill/dist/quill.snow.css",
               "./node_modules/quill/dist/quill.core.css",
               "../node_modules/quill/dist/quill.min.js",
               "src/styles.css"
