--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,8 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/quill/dist/quill.snow.css",
-              "../node_modules/quill/dist/quill.core.css",
-              "../node_modules/quill/dist/quill.min.js",
+              "./node_modules/quill/dist/quill.snow.css",
+              "./node_modules/quill/dist/quill.core.css",
               "src/styles.css"
             ],
             "scripts": [
