--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.2.0",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
+    "@ngrx/effects": "^7.4.0",
+    "@ngrx/store": "^7.4.0",
     "angular-froala-wysiwyg": "^2.9.5",
     "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
